# Rust-practical-materials

./: .gitignore  README.md
.github/workflows/: ci.yml
01_mini_grep/: README.md  test.txt
01_mini_grep/src/: main.rs
02_single_threaded_server/: 404.html  README.md
02_single_threaded_server/src/: lib.rs  main.rs
03_async_chat/: Cargo.toml  README.md
04_rest_api/: README.md  schema.sql
04_rest_api/src/: handler.rs  main.rs  model.rs
05_testing/: Cargo.toml
05_testing/src/: lib.rs
06_observability/: Cargo.toml  README.md
06_observability/src/: main.rs
99_capstone/: README.md
solutions/00_tooling/: Cargo.toml  README.md
solutions/00_tooling/src/: lib.rs
solutions/01_mini_grep/: Cargo.toml
solutions/01_mini_grep/src/: main.rs
solutions/02_single_threaded_server/: Cargo.toml  README.md  hello.html
solutions/02_single_threaded_server/src/: lib.rs  main.rs
solutions/03_async_chat/: README.md
solutions/04_rest_api/: .env.example  Cargo.toml  README.md
solutions/04_rest_api/src/: handler.rs  main.rs  model.rs
solutions/05_testing/: README.md
tracks/: README.md
