[package]
name = "product_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (SQLite)
# runtime-tokioとtls-native-tlsは非同期ランタイム用
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite"] }

# Environment variables
dotenvy = "0.15"

# Tracing / Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
